// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builder should add list options to cli 1`] = `
Array [
  "foo list <options>

List Options:
  --all, -a   Show done todos that are normally hidden[boolean] [default: false]
  --json      Show information as a JSON array        [boolean] [default: false]
  --long, -l  Show extended information               [boolean] [default: false]

Options:
  --help     Show help                                                 [boolean]
  --version  Show version number                                       [boolean]",
]
`;

exports[`mapAliasOnOptions "la" should activate "all" option 1`] = `
Object {
  "$0": "foo",
  "_": Array [
    "la",
  ],
  "all": true,
  "json": false,
  "long": false,
}
`;

exports[`mapAliasOnOptions "ll" should activate "long" option 1`] = `
Object {
  "$0": "foo",
  "_": Array [
    "ll",
  ],
  "all": false,
  "json": false,
  "long": true,
}
`;

exports[`mapAliasOnOptions "ls" do nothing 1`] = `
Object {
  "$0": "foo",
  "_": Array [
    "ls",
  ],
  "all": false,
  "json": false,
  "long": false,
}
`;

exports[`mapAliasOnOptions should do nothing if no alias is given 1`] = `
Object {
  "$0": "foo",
  "_": Array [],
  "all": false,
  "json": false,
  "long": false,
}
`;

exports[`mapAliasOnOptions should do nothing if the alias is not found 1`] = `
Object {
  "$0": "foo",
  "_": Array [
    "oof",
  ],
  "all": false,
  "json": false,
  "long": false,
}
`;
